[project]
name = "knowledge-agent"
version = "0.1.0"
description = "AI agent for intelligently updating and maintaining LightRAG knowledge base"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "json-repair",
    "langchain-mcp-adapters",
    "langchain-openai",
    "pydantic",
    "psycopg2-binary",
    "python-dotenv",
    "langchain",
    "langgraph",
]