[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragdemon"
version = "0.1.0"
description = "Les Mills AI Agent"
dependencies = [
    "fastapi",
    "uvicorn[standard]"
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]
