[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "chromadb>=1.0.20",
    "contextvars>=2.4",
    "dask>=2025.7.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.75",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
    "langchain-ray>=0.0.12",
    "mlflow>=3.3.2",
    "numpy>=2.3.2",
    "opencv-python-headless>=4.11.0.86",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "typing-extensions>=4.14.1",
    "typing-inspection>=0.4.1",
    "uvicorn>=0.35.0",
]
