[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmmllab-server"
version = "0.1.0"
description = "API server for language model inference"
authors = [
    {name = "LongStoryMedia", email = "info@longstorymedia.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
llmmllab-rest-server = "app:main"
llmmllab-grpc-server = "grpc_server:serve"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
